fixed align

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -28,3 +28,15 @@
 .dropdown-item  {
   padding: 0px;
 }
+
+.nav-item {
+
+.btn {
+  margin: 0 !important;
+}
+
+a {
+  font-size: 20px;
+}
+
+}
